[package]
name = "batching-queue"
version = "0.1.0"
authors = ["Kushagra Gupta <kushgpt08@gmail.com>"]
edition = "2018"
description = "An Israeli Queue implementation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Kushagra-0801/batching-queue/"
keywords = ["data structure", "queue", "batch", "israeli", "group"]
categories = ["data-structures"]
